duplicate check done - inshallah fine

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -949,15 +949,6 @@ Now available to download in full as a PDF.},
   year        = {2020},
 }
 
-@InProceedings{acosta2010gastef,
-  author    = {Acosta, B and Moretto, P and Frischauf, N and Harskamp, F and Bonato, C},
-  booktitle = {Proceedings of the eighteenth world hydrogen energy conference},
-  title     = {GASTEF: the JRC-IE compressed hydrogen gas tanks testing facility},
-  pages     = {16--21},
-  groups    = {hydro_Plane},
-  year      = {2010},
-}
-
 @Misc{img_Toyota,
   author = {Darren Halstead},
   title  = {Image, Toyota hydrogen model car},
@@ -2838,69 +2829,6 @@ Now available to download in full as a PDF.},
   year         = {2021},
 }
 
-@Misc{Gritzmann2013,
-  author    = {Gritzmann, Peter},
-  date      = {2013},
-  title     = {Grundlagen der Mathematischen Optimierung},
-  doi       = {10.1007/978-3-8348-2011-2},
-  groups    = {optimization_books},
-  publisher = {Springer Fachmedien Wiesbaden},
-}
-
-@Misc{Koop2018,
-  author    = {Koop, Andreas and Moock, Hardy},
-  date      = {2018},
-  title     = {Lineare Optimierung – eine anwendungsorientierte Einführung in Operations Research},
-  doi       = {10.1007/978-3-662-56141-6},
-  groups    = {optimization_books},
-  publisher = {Springer Berlin Heidelberg},
-}
-
-@Misc{Jarre2019,
-  author    = {Jarre, Florian and Stoer, Josef},
-  date      = {2019},
-  title     = {Optimierung},
-  doi       = {10.1007/978-3-662-58855-0},
-  groups    = {optimization_books},
-  publisher = {Springer Berlin Heidelberg},
-}
-
-@Misc{Grimme2018,
-  author    = {Grimme, Christian and Bossek, Jakob},
-  date      = {2018},
-  title     = {Einführung in die Optimierung},
-  doi       = {10.1007/978-3-658-21151-6},
-  groups    = {optimization_books},
-  publisher = {Springer Fachmedien Wiesbaden},
-}
-
-@Misc{Scholz2018,
-  author    = {Scholz, Daniel},
-  date      = {2018},
-  title     = {Optimierung interaktiv},
-  doi       = {10.1007/978-3-662-57953-4},
-  groups    = {optimization_books},
-  publisher = {Springer Berlin Heidelberg},
-}
-
-@Misc{Dietz2019,
-  author    = {Dietz, Hans},
-  date      = {2019},
-  title     = {Mathematik für Wirtschaftswissenschaftler},
-  doi       = {10.1007/978-3-662-58702-7},
-  groups    = {optimization_books},
-  publisher = {Springer Berlin Heidelberg},
-}
-
-@Misc{Schumacher2020,
-  author    = {Schumacher, Axel},
-  date      = {2020},
-  title     = {Optimierung mechanischer Strukturen},
-  doi       = {10.1007/978-3-662-60328-4},
-  groups    = {optimization_books},
-  publisher = {Springer Berlin Heidelberg},
-}
-
 @Book{mdobook,
   author    = {Joaquim R. R. A. Martins and Andrew Ning},
   title     = {Engineering Design Optimization},
@@ -2912,15 +2840,6 @@ Now available to download in full as a PDF.},
   groups    = {mdo},
   month     = {January},
   year      = {2022},
-}
-
-@Misc{Papageorgiou2015,
-  author    = {Papageorgiou, Markos and Leibold, Marion and Buss, Martin},
-  date      = {2015},
-  title     = {Optimierung},
-  doi       = {10.1007/978-3-662-46936-1},
-  groups    = {optimization_books},
-  publisher = {Springer Berlin Heidelberg},
 }
 
 @Article{Li2016,
@@ -3731,14 +3650,14 @@ Now available to download in full as a PDF.},
 
 @Misc{kmeans_Visual_Explanation,
   title  = {k-means++ visual explanation},
-  note   = {https://theory.stanford.edu/~sergei/slides/BATS-Means.pdf - 30.11.2021},
+  note   = {https://theory.stanford.edu/~sergei/slides/BATS-Means.pdf - 02.09.2024},
   url    = {https://theory.stanford.edu/~sergei/slides/BATS-Means.pdf},
   groups = {master, kmeans},
   owner  = {Sergei Vassilvitskii},
 }
 
 @Misc{link_Kmeans_Img_Proc,
-  title  = {kmeans},
+  title  = {Image explaining how kmeans works},
   note   = {https://stanford.edu/~shervine/teaching/cs-229/cheatsheet-unsupervised-learning - 03.04.2024},
   url    = {https://stanford.edu/~shervine/teaching/cs-229/cheatsheet-unsupervised-learning},
   groups = {master, kmeans},
@@ -3752,6 +3671,86 @@ Now available to download in full as a PDF.},
   doi       = {10.1007/978-3-662-61864-6},
   groups    = {technische_mechanik},
   publisher = {Springer Berlin Heidelberg},
+}
+
+@Book{Papageorgiou2015,
+  author    = {Papageorgiou, Markos and Leibold, Marion and Buss, Martin},
+  date      = {2015},
+  title     = {Optimierung: Statische, dynamische, stochastische Verfahren für die Anwendung},
+  doi       = {10.1007/978-3-662-46936-1},
+  isbn      = {9783662469361},
+  publisher = {Springer Berlin Heidelberg},
+  groups    = {optimization_books},
+}
+
+@Book{Scholz2018,
+  author    = {Scholz, Daniel},
+  date      = {2018},
+  title     = {Optimierung interaktiv: Grundlagen verstehen, Modelle erforschen und Verfahren anwenden},
+  doi       = {10.1007/978-3-662-57953-4},
+  isbn      = {9783662579534},
+  publisher = {Springer Berlin Heidelberg},
+  groups    = {optimization_books},
+}
+
+@Book{Schumacher2020,
+  author    = {Schumacher, Axel},
+  date      = {2020},
+  title     = {Optimierung mechanischer Strukturen: Grundlagen und industrielle Anwendungen},
+  doi       = {10.1007/978-3-662-60328-4},
+  isbn      = {9783662603284},
+  publisher = {Springer Berlin Heidelberg},
+  groups    = {optimization_books},
+}
+
+@Book{Grimme2018,
+  author    = {Grimme, Christian and Bossek, Jakob},
+  date      = {2018},
+  title     = {Einführung in die Optimierung: Konzepte, Methoden und Anwendungen},
+  doi       = {10.1007/978-3-658-21151-6},
+  isbn      = {9783658211516},
+  publisher = {Springer Fachmedien Wiesbaden},
+  groups    = {optimization_books},
+}
+
+@Book{Koop2018,
+  author    = {Koop, Andreas and Moock, Hardy},
+  date      = {2018},
+  title     = {Lineare Optimierung – eine anwendungsorientierte Einführung in Operations Research},
+  doi       = {10.1007/978-3-662-56141-6},
+  isbn      = {9783662561416},
+  publisher = {Springer Berlin Heidelberg},
+  groups    = {optimization_books},
+}
+
+@Book{Gritzmann2013,
+  author    = {Gritzmann, Peter},
+  date      = {2013},
+  title     = {Grundlagen der Mathematischen Optimierung: Diskrete Strukturen, Komplexitätstheorie, Konvexitätstheorie, Lineare Optimierung, Simplex-Algorithmus, Dualität},
+  doi       = {10.1007/978-3-8348-2011-2},
+  isbn      = {9783834820112},
+  publisher = {Springer Fachmedien Wiesbaden},
+  groups    = {optimization_books},
+}
+
+@Book{Jarre2019,
+  author    = {Jarre, Florian and Stoer, Josef},
+  date      = {2019},
+  title     = {Optimierung: Einführung in mathematische Theorie und Methoden},
+  doi       = {10.1007/978-3-662-58855-0},
+  isbn      = {9783662588550},
+  publisher = {Springer Berlin Heidelberg},
+  groups    = {optimization_books},
+}
+
+@Book{Dietz2019,
+  author    = {Dietz, Hans M.},
+  date      = {2019},
+  title     = {Mathematik für Wirtschaftswissenschaftler: Band 2: Lineare Algebra und Optimierung},
+  doi       = {10.1007/978-3-662-58702-7},
+  isbn      = {9783662587027},
+  publisher = {Springer Berlin Heidelberg},
+  groups    = {optimization_books},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
@@ -3790,7 +3789,7 @@ Now available to download in full as a PDF.},
 2 StaticGroup:meshio\;0\;1\;0x8a8a8aff\;\;\;;
 2 StaticGroup:scikit_learn\;0\;1\;0x8a8a8aff\;\;\;;
 2 StaticGroup:kmeans\;0\;0\;0x8a8a8aff\;\;\;;
-1 StaticGroup:optimization_algorithm\;0\;0\;\;\;\;;
+1 StaticGroup:optimization_algorithm\;0\;1\;\;\;\;;
 2 StaticGroup:optimization_books\;0\;1\;\;\;\;;
 2 StaticGroup:mdo\;0\;1\;\;\;\;;
 2 StaticGroup:mlti_objective\;0\;1\;\;\;\;;
