--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -3753,6 +3753,45 @@ Now available to download in full as a PDF.},
   groups    = {optimization_books},
 }
 
+@Article{Capurso2022,
+  author       = {Capurso, T. and Stefanizzi, M. and Torresi, M. and Camporeale, S.M.},
+  date         = {2022-01},
+  journaltitle = {Energy Conversion and Management},
+  title        = {Perspective of the role of hydrogen in the 21st century energy transition},
+  doi          = {10.1016/j.enconman.2021.114898},
+  issn         = {0196-8904},
+  pages        = {114898},
+  volume       = {251},
+  groups       = {motivation_parts},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Qureshi2022,
+  author       = {Qureshi, Fazil and Yusuf, Mohammad and Kamyab, Hesam and Zaidi, Sadaf and Junaid Khalil, Mohd and Arham Khan, Mohd and Azad Alam, Mohammad and Masood, Faisal and Bazli, Leila and Chelliapan, Shreeshivadasan and Abdullah, Bawadi},
+  date         = {2022-10},
+  journaltitle = {Sustainable Energy Technologies and Assessments},
+  title        = {Current trends in hydrogen production, storage and applications in India: A review},
+  doi          = {10.1016/j.seta.2022.102677},
+  issn         = {2213-1388},
+  pages        = {102677},
+  volume       = {53},
+  groups       = {motivation_parts},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Rasul2022,
+  author       = {Rasul, M.G. and Hazrat, M.A and Sattar, M.A. and Jahirul, M.I. and Shearer, M.J.},
+  date         = {2022-11},
+  journaltitle = {Energy Conversion and Management},
+  title        = {The future of hydrogen: Challenges on production, storage and applications},
+  doi          = {10.1016/j.enconman.2022.116326},
+  issn         = {0196-8904},
+  pages        = {116326},
+  volume       = {272},
+  groups       = {motivation_parts},
+  publisher    = {Elsevier BV},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
