updated the bib

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -954,6 +954,7 @@ Now available to download in full as a PDF.},
   title  = {Image, Toyota hydrogen model car},
   note   = {https://unsplash.com/photos/yhXcqS-f-X4 - 18.08.2022},
   url    = {https://unsplash.com/photos/yhXcqS-f-X4},
+  urldate = {2022-08-18},
   groups = {webpages},
 }
 
@@ -962,6 +963,7 @@ Now available to download in full as a PDF.},
   title  = {Image, truck},
   note   = {https://unsplash.com/photos/YnSWpIPX3pE - 18.08.2022},
   url    = {https://unsplash.com/photos/YnSWpIPX3pE},
+  urldate = {2022-08-18},
   groups = {webpages},
 }
 
@@ -970,6 +972,7 @@ Now available to download in full as a PDF.},
   title  = {Image, ground storage},
   note   = {https://unsplash.com/photos/ZVkDLrXGMdw - 18.08.2022},
   url    = {https://unsplash.com/photos/ZVkDLrXGMdw},
+  urldate = {2022-08-18},
   groups = {webpages},
 }
 
@@ -1000,6 +1003,7 @@ Now available to download in full as a PDF.},
   title  = {Image, Flying bird},
   note   = {https://pixabay.com/photos/crows-birds-animals-nature-7381423/ - 21.08.2022},
   url    = {https://pixabay.com/photos/crows-birds-animals-nature-7381423/},
+  urldate = {2022-08-21},
   groups = {webpages},
 }
 
@@ -1068,6 +1072,7 @@ Now available to download in full as a PDF.},
   title  = {Image, shall represent transportation},
   note   = {https://unsplash.com/photos/eCc7FjMoR74- 18.08.2022},
   url    = {https://unsplash.com/photos/eCc7FjMoR74},
+  urldate = {2022-08-18},
   groups = {webpages},
   owner  = {Bernd Dittrich},
 }
@@ -1196,6 +1201,7 @@ Now available to download in full as a PDF.},
   title  = {Homepage of Airbus},
   note   = {https://aircraft.airbus.com/en/aircraft/a350-clean-sheet-clean-start/a350-1000 - 03.04.2024},
   url    = {https://aircraft.airbus.com/en/aircraft/a350-clean-sheet-clean-start/a350-1000},
+  urldate = {2024-04-03},
   groups = {webpages},
   owner  = {Airbus},
 }
@@ -1667,12 +1673,13 @@ Now available to download in full as a PDF.},
 }
 
 @Misc{link_Mixtral_8_7,
-  author = {Mixtral},
-  title  = {Homepage of Mixtral AI},
-  note   = {https://mistral.ai/news/mixtral-of-experts/ - 03.04.2024},
-  url    = {https://mistral.ai/news/mixtral-of-experts/},
-  groups = {webpages},
-  owner  = {Mixtral},
+  author  = {Mixtral},
+  title   = {Homepage of Mixtral AI},
+  note    = {https://mistral.ai/news/mixtral-of-experts/ - 03.04.2024},
+  url     = {https://mistral.ai/news/mixtral-of-experts/},
+  urldate = {2024-04-03},
+  groups  = {webpages},
+  owner   = {Mixtral},
 }
 
 @InProceedings{wu2003non,
@@ -2950,7 +2957,7 @@ Now available to download in full as a PDF.},
   title       = {ILR-LFT / 23-09 TR: LuFo VI-2 Zwischenbericht zum Vorhaben K2H2 (Berichtszeitraum 01.04.2022 bis 31.12.2022)},
   number      = {23-09},
   type        = {techreport},
-  groups      = {Eigene_Berichte:K2H2, lisa},
+  groups      = {Eigene_Berichte:K2H2},
 }
 
 @TechReport{tober2023a,
@@ -2960,7 +2967,7 @@ Now available to download in full as a PDF.},
   title       = {IR 23-12: Konzept zur Messmittelintegration in einen Tragflügel mit integralen Wasserstofftanks},
   number      = {23-12},
   type        = {resreport},
-  groups      = {Eigene_Berichte:K2H2, lisa},
+  groups      = {Eigene_Berichte:K2H2},
 }
 
 @TechReport{tober2023,
@@ -2969,7 +2976,7 @@ Now available to download in full as a PDF.},
   institution = {TU Dresden},
   title       = {Lastenkatalog Prüfstand (Prüfgegenstandsseite)},
   number      = {IR23-03},
-  groups      = {Lastenbericht_Februar_2023:K2H2, lisa},
+  groups      = {Lastenbericht_Februar_2023:K2H2},
 }
 
 @Article{Bednarska2020,
@@ -2982,7 +2989,6 @@ Now available to download in full as a PDF.},
   pages        = {2249},
   volume       = {13},
   day          = {13},
-  groups       = {lisa},
   month        = {5},
   publisher    = {MDPI AG},
   year         = {2020},
@@ -2998,7 +3004,6 @@ Now available to download in full as a PDF.},
   pages        = {545},
   volume       = {19},
   day          = {28},
-  groups       = {lisa},
   month        = {1},
   publisher    = {MDPI AG},
   year         = {2019},
@@ -3014,7 +3019,6 @@ Now available to download in full as a PDF.},
   pages        = {6685},
   volume       = {20},
   day          = {22},
-  groups       = {lisa},
   month        = {11},
   publisher    = {MDPI AG},
   year         = {2020},
@@ -3030,7 +3034,6 @@ Now available to download in full as a PDF.},
   pages        = {2000-2010},
   volume       = {234},
   day          = {25},
-  groups       = {lisa},
   month        = {8},
   publisher    = {SAGE Publications},
   year         = {2020},
@@ -3046,7 +3049,6 @@ Now available to download in full as a PDF.},
   pages        = {1665},
   volume       = {20},
   day          = {17},
-  groups       = {lisa},
   month        = {3},
   publisher    = {MDPI AG},
   year         = {2020},
@@ -3061,7 +3063,6 @@ Now available to download in full as a PDF.},
   number       = {4},
   volume       = {40},
   day          = {7},
-  groups       = {lisa},
   month        = {10},
   publisher    = {Springer Science and Business Media LLC},
   year         = {2021},
@@ -3075,7 +3076,6 @@ Now available to download in full as a PDF.},
   doi          = {10.1016/j.matdes.2021.109754},
   pages        = {109754},
   volume       = {205},
-  groups       = {lisa},
   publisher    = {Elsevier BV},
 }
 
@@ -3089,7 +3089,6 @@ Now available to download in full as a PDF.},
   pages        = {2990-3017},
   volume       = {21},
   day          = {27},
-  groups       = {lisa},
   month        = {12},
   publisher    = {SAGE Publications},
   year         = {2021},
@@ -3105,7 +3104,6 @@ Now available to download in full as a PDF.},
   pages        = {15494-15519},
   volume       = {15},
   day          = {30},
-  groups       = {lisa},
   month        = {6},
   publisher    = {MDPI AG},
   year         = {2015},
@@ -3116,7 +3114,6 @@ Now available to download in full as a PDF.},
   date         = {2010},
   journaltitle = {Norm},
   title        = {Europäisches Parlament (Veranst.): Verordnung (EU) Nr. 406/2010 der Kommission vom 26.April 2010 zur Durchführung der Verordnung (EG) Nr. 79/2009 des Europäischen Parlaments und des Rates über die Typgenehmigung von wasserstoffbetriebenen Kraftfahrzeugen},
-  groups       = {lisa},
 }
 
 @Article{EASA2018,
@@ -3124,7 +3121,6 @@ Now available to download in full as a PDF.},
   date         = {2018-06},
   journaltitle = {Norm},
   title        = {EASA: Easy Access Rules for Normal, Utility, Aerobatic and Commuter Category Aeroplanes (CS-23) (Amendment 4). EASA,},
-  groups       = {lisa},
 }
 
 @InBook{Gasior2018,
@@ -3135,10 +3131,8 @@ Now available to download in full as a PDF.},
   doi       = {10.1115/pvp2018-85157},
   publisher = {American Society of Mechanical Engineers},
   day       = {15},
-  groups    = {lisa},
   month     = {7},
   year      = {2018},
-
 }
 
 @Article{DeMiguel2016,
@@ -3150,7 +3144,6 @@ Now available to download in full as a PDF.},
   number       = {20},
   pages        = {8606-8615},
   volume       = {41},
-  groups       = {lisa},
   publisher    = {Elsevier BV},
 }
 
@@ -3160,7 +3153,6 @@ Now available to download in full as a PDF.},
   title  = {HBM, Structural Health Monitoring},
   note   = {https://www.hbm.com/en/ - 2023},
   url    = {https://www.hbm.com/en/},
-  groups = {lisa},
 }
 
 @Article{Kaeseberg2012,
@@ -3168,7 +3160,6 @@ Now available to download in full as a PDF.},
   date         = {2012},
   journaltitle = {6th European Workshop onStructural Health Monitoring},
   title        = {FRP Systems with Embedded FBG for Structural Monitoring and Retrofitting},
-  groups       = {lisa},
 }
 
 @Article{Rupcic2023,
@@ -3792,6 +3783,51 @@ Now available to download in full as a PDF.},
   publisher    = {Elsevier BV},
 }
 
+@Misc{APUS_0,
+  author  = {Unkown},
+  title   = {APUS, aircraft manufacturer},
+  note    = {https://group.apus-aero.com/zero-emission - 27.02.2024},
+  url     = {https://group.apus-aero.com/zero-emission/},
+  urldate = {2024-02-27},
+  groups  = {webpages},
+  month   = feb,
+  year    = {2024},
+}
+
+@Misc{APUS_1,
+  author  = {Unkown},
+  title   = {APUS, aircraft manufacturer},
+  note    = {https://group.apus-aero.com/wp-content/uploads/2023/10/APUS_i-2_Broschuere_20231027_Web.pdf - 27.02.2024},
+  url     = {https://group.apus-aero.com/wp-content/uploads/2023/10/APUS_i-2_Broschuere_20231027_Web.pdf},
+  urldate = {2024-02-27},
+  groups  = {webpages},
+  month   = {2},
+  year    = {2024},
+}
+
+@Article{Friedmann2023,
+  author       = {Friedmann, Felix and Rienecker, Hannes and Dexl, Florian and Hauffe, Andreas and Wolf, Klaus},
+  date         = {2023-02},
+  journaltitle = {Proceedings of the Institution of Mechanical Engineers, Part G: Journal of Aerospace Engineering},
+  title        = {Design studies for a light aircraft wing with highly integrated load-bearing hydrogen tanks using multi-objective optimization methods},
+  doi          = {10.1177/09544100231155697},
+  issn         = {2041-3025},
+  number       = {15},
+  pages        = {3369--3381},
+  volume       = {237},
+  groups       = {swith},
+  publisher    = {SAGE Publications},
+}
+
+@Misc{Scheffel2015,
+  author  = {Phillip Scheffel},
+  date    = {2015},
+  title   = {[Patent] TUBESTRUCT integral high-pressure tube tank The basic idea is a single-tube structure of a wing, where the tubes are loaded under high internal pressure as well as able to absorb thrust and torsion loads from stresses in the flight. The tubes can absorb hydrogen, methane or other volatile gases.},
+  url     = {https://patents.google.com/patent/DE102015008178A1/en?oq=Dokument+DE102015008178A1},
+  urldate = {2024-09-03},
+  groups  = {patents},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
@@ -3811,6 +3847,7 @@ Now available to download in full as a PDF.},
 2 StaticGroup:chaos\;0\;1\;0x8a8a8aff\;\;\;;
 1 StaticGroup:norms\;0\;1\;0x8a8a8aff\;\;\;;
 1 StaticGroup:swith\;0\;1\;0x8a8a8aff\;\;\;;
+2 StaticGroup:patents\;0\;1\;0x7c7c7cff\;\;\;;
 1 StaticGroup:webpages\;0\;1\;0x8a8a8aff\;\;\;;
 1 StaticGroup:Report_2\;0\;1\;0x8a8a8aff\;\;\;;
 1 StaticGroup:structural tests\;0\;1\;0x8a8a8aff\;\;\;;
@@ -3832,5 +3869,4 @@ Now available to download in full as a PDF.},
 2 StaticGroup:optimization_books\;0\;1\;\;\;\;;
 2 StaticGroup:mdo\;0\;1\;\;\;\;;
 2 StaticGroup:mlti_objective\;0\;1\;\;\;\;;
-1 StaticGroup:lisa\;0\;1\;0x8a8a8aff\;\;\;;
 }
