additions of sources and correction for state of the art required

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -3828,6 +3828,19 @@ Now available to download in full as a PDF.},
   groups  = {patents},
 }
 
+@Article{Adler2023,
+  author       = {Adler, Eytan J. and Martins, Joaquim R.R.A.},
+  date         = {2023-08},
+  journaltitle = {Progress in Aerospace Sciences},
+  title        = {Hydrogen-powered aircraft: Fundamental concepts, key technologies, and environmental impacts},
+  doi          = {10.1016/j.paerosci.2023.100922},
+  issn         = {0376-0421},
+  pages        = {100922},
+  volume       = {141},
+  groups       = {actual_hydro_plane},
+  publisher    = {Elsevier BV},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
