inital corrections on state of the art - inshallah

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -3841,6 +3841,17 @@ Now available to download in full as a PDF.},
   publisher    = {Elsevier BV},
 }
 
+@Misc{APUS_Image,
+  author  = {Unkown},
+  title   = {Image of the APUS i2},
+  note    = {https://www.fachkraefteportal-brandenburg.de/ila-2022/apus-aeronautical-engineering-gmbh - 04.09.2024},
+  url     = {https://www.fachkraefteportal-brandenburg.de/ila-2022/apus-aeronautical-engineering-gmbh},
+  urldate = {2024-09-04},
+  groups  = {webpages},
+  month   = {2},
+  year    = {2024},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
