--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -5,7 +5,7 @@
   doi       = {10.1007/978-3-662-61862-2},
   isbn      = {9783662618622},
   publisher = {Springer Berlin Heidelberg},
-  groups    = {Report_2, technische_mechanik},
+  groups    = {technische_mechanik, report_2},
 }
 
 @Book{Gross2023,
@@ -15,7 +15,7 @@
   doi       = {10.1007/978-3-662-66524-4},
   isbn      = {9783662665244},
   publisher = {Springer Berlin Heidelberg},
-  groups    = {Report_2, technische_mechanik},
+  groups    = {technische_mechanik, report_2},
 }
 
 @Book{Hahn2018,
@@ -891,7 +891,7 @@ Now available to download in full as a PDF.},
   number    = {5},
   pages     = {414--419},
   volume    = {114},
-  groups    = {hydro_Plane},
+  groups    = {hydro_Plane, report_1},
   journal   = {ATZ-Automobiltechnische Zeitschrift},
   publisher = {Springer},
   year      = {2012},
@@ -902,7 +902,7 @@ Now available to download in full as a PDF.},
   title     = {Fahrzeug mit lasttragendem Drucktank},
   note      = {DE102015225385A1},
   day       = {22},
-  groups    = {hydro_Plane},
+  groups    = {hydro_Plane, report_1, patents},
   month     = jun # {~22},
   publisher = {Google Patents},
   year      = {2017},
@@ -913,7 +913,7 @@ Now available to download in full as a PDF.},
   title     = {Lasttragender Drucktank zur Speicherung von Brennstoff und Kraftfahrzeug},
   note      = {DE102017011492A1},
   day       = {26},
-  groups    = {hydro_Plane},
+  groups    = {hydro_Plane, report_1, patents},
   month     = sep # {~26},
   publisher = {Google Patents},
   year      = {2019},
@@ -937,7 +937,7 @@ Now available to download in full as a PDF.},
   doi          = {10.1155/2019/4030379},
   pages        = {1--15},
   volume       = {2019},
-  groups       = {hydro_Plane},
+  groups       = {hydro_Plane, report_1, report_2},
   publisher    = {Hindawi Limited},
 }
 
@@ -985,7 +985,7 @@ Now available to download in full as a PDF.},
   number       = {16},
   pages        = {8601--8614},
   volume       = {44},
-  groups       = {hydro_Plane},
+  groups       = {hydro_Plane, report_1},
   publisher    = {Elsevier {BV}},
 }
 
@@ -1011,18 +1011,9 @@ Now available to download in full as a PDF.},
   author  = {Barral, Katia and Barth{\'e}l{\'e}my, Herv{\'e}},
   title   = {Hydrogen high pressure tanks storages: overview and new trends due to H2 Energy specifications and constraints},
   volume  = {20},
-  groups  = {hydrogen},
+  groups  = {hydrogen, report_1},
   journal = {June. http://www. cder. dz/},
   year    = {2006},
-}
-
-@Book{Klell2018,
-  author    = {Manfred Klell and Helmut Eichlseder and Alexander Trattner},
-  date      = {2018},
-  title     = {Wasserstoff in der Fahrzeugtechnik},
-  doi       = {10.1007/978-3-658-20447-1},
-  publisher = {Springer Fachmedien Wiesbaden},
-  groups    = {hydro_Plane},
 }
 
 @Book{Rosen2018,
@@ -1031,7 +1022,7 @@ Now available to download in full as a PDF.},
   title     = {Beitrag zur Optimierung von Wasserstoffdruckbehältern},
   doi       = {10.1007/978-3-658-21124-0},
   publisher = {Springer Fachmedien Wiesbaden},
-  groups    = {hydro_Plane},
+  groups    = {hydro_Plane, report_1},
 }
 
 @Article{dryer2007spontaneous,
@@ -1040,7 +1031,7 @@ Now available to download in full as a PDF.},
   number    = {4},
   pages     = {663--694},
   volume    = {179},
-  groups    = {hydro_Plane, chaos},
+  groups    = {hydro_Plane, chaos, report_1},
   journal   = {Combustion science and technology},
   publisher = {Taylor \& Francis},
   year      = {2007},
@@ -1052,7 +1043,7 @@ Now available to download in full as a PDF.},
   doi          = {10.2172/534504},
   url          = {https://www.osti.gov/biblio/534504},
   abstractnote = {This report reviews the safety characteristics of hydrogen as an energy carrier for a fuel cell vehicle (FCV), with emphasis on high pressure gaseous hydrogen onboard storage. The authors consider normal operation of the vehicle in addition to refueling, collisions, operation in tunnels, and storage in garages. They identify the most likely risks and failure modes leading to hazardous conditions, and provide potential countermeasures in the vehicle design to prevent or substantially reduce the consequences of each plausible failure mode. They then compare the risks of hydrogen with those of more common motor vehicle fuels including gasoline, propane, and natural gas.},
-  groups       = {hydro_Plane},
+  groups       = {hydro_Plane, report_1},
   month        = {5},
   place        = {United States},
   year         = {1997},
@@ -1063,7 +1054,7 @@ Now available to download in full as a PDF.},
   booktitle = {SAE World Congress},
   title     = {Standardized equation for hydrogen gas densities for fuel consumption applications},
   pages     = {3--6},
-  groups    = {hydro_Plane},
+  groups    = {hydro_Plane, report_1},
   year      = {2006},
 }
 
@@ -1092,7 +1083,7 @@ Now available to download in full as a PDF.},
   number    = {6},
   pages     = {1234--1241},
   volume    = {156},
-  groups    = {hydro_Plane},
+  groups    = {hydro_Plane, report_1},
   journal   = {Combustion and flame},
   publisher = {Elsevier},
   year      = {2009},
@@ -1119,7 +1110,7 @@ Now available to download in full as a PDF.},
   volume         = {12},
   abstract       = {The hydrogen storage tank is a key parameter of the hydrogen storage system in hydrogen fuel cell vehicles (HFCVs), as its safety determines the commercialization of HFCVs. Compared with other types, the type IV hydrogen storage tank which consists of a polymer liner has the advantages of low cost, lightweight, and low storage energy consumption, but meanwhile, higher hydrogen permeability. A detailed review of the existing research on hydrogen permeability of the liner material of type IV hydrogen storage tanks can improve the understanding of the hydrogen permeation mechanism and provide references for following-up researchers and research on the safety of HFCVs. The process of hydrogen permeation and test methods are firstly discussed in detail. This paper then analyzes the factors that affect the process of hydrogen permeation and the barrier mechanism of the liner material and summarizes the prediction models of gas permeation. In addition to the above analysis and comments, future research on the permeability of the liner material of the type IV hydrogen storage tank is prospected.},
   article-number = {130},
-  groups         = {hydrogen},
+  groups         = {hydrogen, report_1},
   journal        = {World Electric Vehicle Journal},
   year           = {2021},
 }
@@ -1133,7 +1124,7 @@ Now available to download in full as a PDF.},
   number       = {14},
   pages        = {5954--5960},
   volume       = {34},
-  groups       = {hydrogen},
+  groups       = {hydrogen, report_1},
   publisher    = {Elsevier {BV}},
 }
 
@@ -1143,7 +1134,7 @@ Now available to download in full as a PDF.},
   number    = {13},
   pages     = {2178--2185},
   volume    = {32},
-  groups    = {hydrogen},
+  groups    = {hydrogen, report_1},
   journal   = {International Journal of Hydrogen Energy},
   publisher = {Elsevier},
   year      = {2007},
@@ -1152,7 +1143,7 @@ Now available to download in full as a PDF.},
 @Article{jallais2017effects,
   author    = {Jallais, Simon and Vyazmina, Elena and Kuznetsov, Mike and Gr{\"u}ne, Joachim and Xu, Boyang P and Wen, Jennifer Xiaoling},
   title     = {Effects of Oxidants on Hydrogen Spontaneous Ignition: Experiments and Modelling},
-  groups    = {hydrogen},
+  groups    = {hydrogen, report_1},
   publisher = {Hydrogen Knowledge Centre},
   year      = {2017},
 }
@@ -1211,7 +1202,7 @@ Now available to download in full as a PDF.},
   title   = {Dynamic crush test on hydrogen pressurized cylinder},
   pages   = {1--50},
   volume  = {2005},
-  groups  = {Hydrogen_Tests},
+  groups  = {Hydrogen_Tests, report_1},
   journal = {Disp},
   year    = {2000},
 }
@@ -1224,7 +1215,7 @@ Now available to download in full as a PDF.},
   organization = {Wiley Online Library},
   pages        = {2100474},
   volume       = {404},
-  groups       = {Hydrogen_Tests},
+  groups       = {Hydrogen_Tests, report_1},
   year         = {2022},
 }
 
@@ -1236,7 +1227,7 @@ Now available to download in full as a PDF.},
   organization = {AIP Publishing LLC},
   pages        = {150001},
   volume       = {2372},
-  groups       = {Hydrogen_Tests},
+  groups       = {Hydrogen_Tests, report_1},
   year         = {2021},
 }
 
@@ -1245,7 +1236,7 @@ Now available to download in full as a PDF.},
   booktitle = {The 7th World Conference on Earthquake Engineering},
   title     = {Studies on earthquake response of grouped underground tanks in soft ground},
   pages     = {173--180},
-  groups    = {Hydrogen_Tests},
+  groups    = {Hydrogen_Tests, report_1},
   year      = {1980},
 }
 
@@ -1255,7 +1246,7 @@ Now available to download in full as a PDF.},
   number    = {8},
   pages     = {817--833},
   volume    = {24},
-  groups    = {Hydrogen_Tests},
+  groups    = {Hydrogen_Tests, report_1},
   journal   = {International journal of solids and structures},
   publisher = {Elsevier},
   year      = {1988},
@@ -1264,7 +1255,7 @@ Now available to download in full as a PDF.},
 @Article{jones1996influence,
   author = {Jones, N and Birch, RS},
   title  = {Influence of internal pressure on the impact behavior of steel pipelines},
-  groups = {Hydrogen_Tests},
+  groups = {Hydrogen_Tests, report_1},
   year   = {1996},
 }
 
@@ -1287,7 +1278,7 @@ Now available to download in full as a PDF.},
   number       = {36},
   pages        = {13705--13730},
   volume       = {48},
-  groups       = {Report_2, hydro_Harms},
+  groups       = {hydro_Harms, report_2},
   publisher    = {Elsevier BV},
 }
 
@@ -1300,7 +1291,7 @@ Now available to download in full as a PDF.},
   issn         = {0016-2361},
   pages        = {125982},
   volume       = {331},
-  groups       = {Report_2},
+  groups       = {report_2},
   publisher    = {Elsevier BV},
 }
 
@@ -1313,7 +1304,7 @@ Now available to download in full as a PDF.},
   issn         = {1089-7690},
   number       = {13},
   volume       = {138},
-  groups       = {Report_2},
+  groups       = {report_2},
   publisher    = {AIP Publishing},
 }
 
@@ -1327,7 +1318,7 @@ Now available to download in full as a PDF.},
   number       = {10–11},
   pages        = {1427--1444},
   volume       = {184},
-  groups       = {Report_2},
+  groups       = {report_2},
   publisher    = {Informa UK Limited},
 }
 
@@ -1340,7 +1331,7 @@ Now available to download in full as a PDF.},
   issn         = {0016-2361},
   pages        = {121955},
   volume       = {308},
-  groups       = {Report_2},
+  groups       = {report_2},
   publisher    = {Elsevier BV},
 }
 
@@ -1354,7 +1345,7 @@ Now available to download in full as a PDF.},
   number       = {33},
   pages        = {15107--15119},
   volume       = {47},
-  groups       = {Report_2},
+  groups       = {report_2},
   publisher    = {Elsevier BV},
 }
 
@@ -1368,7 +1359,7 @@ Now available to download in full as a PDF.},
   issn         = {0950-4230},
   pages        = {223--231},
   volume       = {55},
-  groups       = {Report_2},
+  groups       = {report_2},
   publisher    = {Elsevier BV},
 }
 
@@ -1382,7 +1373,7 @@ Now available to download in full as a PDF.},
   number       = {43},
   pages        = {16530--16544},
   volume       = {48},
-  groups       = {Report_2},
+  groups       = {report_2},
   publisher    = {Elsevier BV},
 }
 
@@ -1395,7 +1386,7 @@ Now available to download in full as a PDF.},
   issn         = {0360-3199},
   pages        = {1029--1046},
   volume       = {50},
-  groups       = {Report_2},
+  groups       = {report_2},
   publisher    = {Elsevier BV},
 }
 
@@ -1406,7 +1397,7 @@ Now available to download in full as a PDF.},
   doi       = {10.1007/978-3-658-35061-1},
   isbn      = {9783658350611},
   publisher = {Springer Fachmedien Wiesbaden},
-  groups    = {Report_2, hydro_books},
+  groups    = {hydro_books, report_1, report_2},
 }
 
 
@@ -1421,7 +1412,7 @@ Now available to download in full as a PDF.},
   doi       = {10.1007/978-3-658-40914-2},
   isbn      = {9783658409142},
   publisher = {Springer Fachmedien Wiesbaden},
-  groups    = {Report_2},
+  groups    = {report_2},
 }
 
  
@@ -1432,7 +1423,7 @@ Now available to download in full as a PDF.},
   doi       = {10.1007/978-3-662-58800-0},
   isbn      = {9783662588000},
   publisher = {Springer Berlin Heidelberg},
-  groups    = {Report_2},
+  groups    = {report_2},
 }
 
  
@@ -1443,7 +1434,7 @@ Now available to download in full as a PDF.},
   doi          = {10.1007/978-3-662-63961-0},
   isbn         = {9783662639610},
   publisher    = {Springer Berlin Heidelberg},
-  groups       = {Report_2},
+  groups       = {report_2},
   issn         = {2512-5214},
   journaltitle = {Springer-Lehrbuch},
 }
@@ -2242,7 +2233,7 @@ Now available to download in full as a PDF.},
   author = {Daniel Filkovic},
   title  = {Graduate work for APAME},
   url    = {http://www.3dpanelmethod.com/documents/Graduate Work.pdf},
-  groups = {Report_2},
+  groups = {report_2},
 }
 
 @Article{DelaporteMathurin2024,
@@ -3922,6 +3913,25 @@ Now available to download in full as a PDF.},
   year      = {2009},
 }
 
+@InCollection{khzouz2020hydrogen,
+  author    = {Khzouz, Martin and Gkanas, Evangelos I},
+  booktitle = {Renewable Energy-Resources, Challenges and Applications},
+  title     = {Hydrogen technologies for mobility and stationary applications: hydrogen production, storage and infrastructure development},
+  publisher = {IntechOpen},
+  groups    = {report_1},
+  year      = {2020},
+}
+
+@Book{Klell2018,
+  author    = {Klell, Manfred and Eichlseder, Helmut and Trattner, Alexander},
+  date      = {2018},
+  title     = {Wasserstoff in der Fahrzeugtechnik},
+  doi       = {10.1007/978-3-658-20447-1},
+  isbn      = {9783658204471},
+  publisher = {Springer Fachmedien Wiesbaden},
+  groups    = {hydro_books},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
@@ -3946,7 +3956,9 @@ Now available to download in full as a PDF.},
 1 StaticGroup:swith\;0\;1\;0x8a8a8aff\;\;\;;
 2 StaticGroup:patents\;0\;1\;0x7c7c7cff\;\;\;;
 1 StaticGroup:webpages\;0\;1\;0x8a8a8aff\;\;\;;
-1 StaticGroup:Report_2\;0\;1\;0x8a8a8aff\;\;\;;
+1 StaticGroup:Reports\;0\;1\;0x8a8a8aff\;\;\;;
+2 StaticGroup:report_1\;0\;1\;0x7c7c7cff\;\;\;;
+2 StaticGroup:report_2\;0\;1\;0x7c7c7cff\;\;\;;
 1 StaticGroup:structural tests\;0\;0\;0x8a8a8aff\;\;\;;
 1 StaticGroup:machine_learning\;0\;1\;0x8a8a8aff\;\;\;;
 2 StaticGroup:curve_Simplifcation\;0\;1\;0x8a8a8aff\;\;\;;
