bib and csl file modified to inshallah proplery cite patents

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -897,36 +897,42 @@ Now available to download in full as a PDF.},
   year      = {2012},
 }
 
-@Misc{Stahl2017,
+@Patent{Stahl2017,
   author    = {Stahl, Hans-Ulrich},
-  title     = {Fahrzeug mit lasttragendem Drucktank},
-  note      = {DE102015225385A1},
+  title     = {[Patent] Fahrzeug mit lasttragendem Drucktank},
+  annote      = {DE102015225385A1},
   day       = {22},
   groups    = {hydro_Plane, report_1, patents},
   month     = jun # {~22},
   publisher = {Google Patents},
   year      = {2017},
+  url= {https://patents.google.com/patent/DE102015225385A1/de?oq=DE102015225385A1},
+   urldate = {2024-09-03},
 }
 
-@Misc{ChristophBechtold2019,
+@Patent{ChristophBechtold2019,
   author    = {Christoph Bechtold, Florian Eidmann},
   title     = {Lasttragender Drucktank zur Speicherung von Brennstoff und Kraftfahrzeug},
-  note      = {DE102017011492A1},
+  annote      = {DE102017011492A1},
   day       = {26},
   groups    = {hydro_Plane, report_1, patents},
   month     = sep # {~26},
   publisher = {Google Patents},
   year      = {2019},
+  url= {https://patents.google.com/patent/DE102017011492A1/de?oq=DE102017011492A1},
+  urldate = {2024-09-03},
 }
 
-@Misc{Pugh1994,
+@Patent{Pugh1994,
   author    = {Pugh, Nicholas},
   title     = {Integrated chassis and compressed gas fuel system of an automotive vehicle},
-  note      = {US Patent 5,370,418},
-  groups    = {hydro_Plane},
+  annote      = {US5370418A},
+  groups    = {hydro_Plane, patents},
   month     = dec # {~6},
   publisher = {Google Patents},
   year      = {1994},
+  url= {https://patents.google.com/patent/US5370418A/en?oq=US+Patent+5%2c370%2c418},
+  urldate = {2024-09-03},
 }
 
 @Article{Liu2019,
@@ -3810,10 +3816,12 @@ Now available to download in full as a PDF.},
   publisher    = {SAGE Publications},
 }
 
-@Misc{Scheffel2015,
+@Patent{Scheffel2015,
   author  = {Phillip Scheffel},
   date    = {2015},
-  title   = {[Patent] TUBESTRUCT integral high-pressure tube tank The basic idea is a single-tube structure of a wing, where the tubes are loaded under high internal pressure as well as able to absorb thrust and torsion loads from stresses in the flight. The tubes can absorb hydrogen, methane or other volatile gases.},
+  title   = {TUBESTRUCT integral high-pressure tube tank The basic idea is a single-tube structure of a wing, where the tubes are loaded under high internal pressure as well as able to absorb thrust and torsion loads from stresses in the flight. The tubes can absorb hydrogen, methane or other volatile gases.},
+  annote    = {DE102015008178A1},
+  type    = {Patent},
   url     = {https://patents.google.com/patent/DE102015008178A1/en?oq=Dokument+DE102015008178A1},
   urldate = {2024-09-03},
   groups  = {patents},
