attempted a 2023 citing replacing approach. however, using typst files are more secure inshallah

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -899,7 +899,7 @@ Now available to download in full as a PDF.},
 
 @Patent{Stahl2017,
   author    = {Stahl, Hans-Ulrich},
-  title     = {[Patent] Fahrzeug mit lasttragendem Drucktank},
+  title     = {Fahrzeug mit lasttragendem Drucktank},
   annote      = {DE102015225385A1},
   day       = {22},
   groups    = {hydro_Plane, report_1, patents},
