init tables - a lot still required - 05.09.2024

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -3113,12 +3113,6 @@ Now available to download in full as a PDF.},
   title        = {Europäisches Parlament (Veranst.): Verordnung (EU) Nr. 406/2010 der Kommission vom 26.April 2010 zur Durchführung der Verordnung (EG) Nr. 79/2009 des Europäischen Parlaments und des Rates über die Typgenehmigung von wasserstoffbetriebenen Kraftfahrzeugen},
 }
 
-@Article{EASA2018,
-  author       = {EASA},
-  date         = {2018-06},
-  journaltitle = {Norm},
-  title        = {EASA: Easy Access Rules for Normal, Utility, Aerobatic and Commuter Category Aeroplanes (CS-23) (Amendment 4). EASA,},
-}
 
 @InBook{Gasior2018,
   author    = {Gąsior, Paweł and Rybczyński, Radosław and Kaleta, Jerzy and Villalonga, Stephane and Nony, Fabien and Magnier, Christophe},
@@ -3940,6 +3934,95 @@ Now available to download in full as a PDF.},
   groups    = {hydro_books},
 }
 
+@TechReport{EASA_CS_Genereral,
+  author      = {{European Union Aviation Safety Agency}},
+  institution = {European Union Aviation Safety Agency},
+  title       = {Certification Specifications (CSs) / Detailed Specifications (DSs)},
+  url = {https://www.easa.europa.eu/en/document-library/certification-specifications},
+  urldate = {2024-09-04},
+  type        = {Certification Specification},
+  address     = {Cologne, Germany},
+  groups      = {norms},
+}
+
+
+@TechReport{EASA_CS_23,
+  author      = {{European Union Aviation Safety Agency}},
+  institution = {European Union Aviation Safety Agency},
+  title       = {EASA: Easy Access Rules for Normal, Utility, Aerobatic and Commuter Category Aeroplanes (CS-23)},
+  url = {https://www.easa.europa.eu/en/document-library/certification-specifications/group/cs-23-normal-utility-aerobatic-and-commuter-aeroplanes#cs-23-normal-utility-aerobatic-and-commuter-aeroplanes},
+  urldate = {2024-09-04},
+  type        = {Certification Specification},
+  address     = {Cologne, Germany},
+  groups      = {norms},
+}
+
+@TechReport{EASA_CS_25,
+  author      = {{European Union Aviation Safety Agency}},
+  institution = {European Union Aviation Safety Agency},
+  title       = {Certification Specifications and Acceptable Means of Compliance for Large Aeroplanes (CS-25)},
+  url = {https://www.easa.europa.eu/en/document-library/certification-specifications/group/cs-25-large-aeroplanes#cs-25-large-aeroplanes},
+  urldate = {2024-09-04},
+  type        = {Certification Specification},
+  address     = {Cologne, Germany},
+  groups      = {norms},
+}
+
+@TechReport{EASA_CS_27,
+  author      = {{European Union Aviation Safety Agency}},
+  institution = {European Union Aviation Safety Agency},
+  title       = {Certification Specifications, Acceptable Means of Compliance and Guidance Material for Small Rotorcraft CS-27},
+  url = {https://www.easa.europa.eu/en/document-library/certification-specifications/group/cs-27-small-rotorcraft#cs-27-small-rotorcraft},
+  urldate = {2024-09-04},
+  type        = {Certification Specification},
+  address     = {Cologne, Germany},
+  groups      = {norms},
+}
+
+@TechReport{EASA_CS_29,
+  author      = {{European Union Aviation Safety Agency}},
+  institution = {European Union Aviation Safety Agency},
+  title       = {Certification Specifications, Acceptable Means of Compliance
+and Guidance Material for Large Rotorcraft CS-29},
+  url = {https://www.easa.europa.eu/en/document-library/certification-specifications/group/cs-29-large-rotorcraft#cs-29-large-rotorcraft},
+  urldate = {2024-09-04},
+  type        = {Certification Specification},
+  address     = {Cologne, Germany},
+  groups      = {norms},
+}
+
+@MISC{EASA_Homepage,
+  author      = {{European Union Aviation Safety Agency}},
+  institution = {European Union Aviation Safety Agency},
+  title       = {European Union Aviation Safety Agency's homepage},
+  url = {https://www.easa.europa.eu/en/home},
+  urldate = {2024-09-04},
+  type        = {Certification Specification},
+  address     = {Cologne, Germany},
+  groups      = {norms, webpages},
+}
+
+@MISC{FAA_Homepage,
+  author      = {{Federal Aviation Administration}},
+  institution = {Federal Aviation Administration},
+  title       = {Federal Aviation Administration's homepage},
+  url = {https://www.faa.gov/},
+  urldate = {2024-09-04},
+  type        = {Certification Specification},
+  groups      = {norms, webpages},
+}
+
+
+@Article{EASA2018,
+  author       = {EASA},
+  date         = {2018-06},
+  journaltitle = {Norm},
+  title        = {EASA: Easy Access Rules for Normal, Utility, Aerobatic and Commuter Category Aeroplanes (CS-23) (Amendment 4). EASA,},
+}
+
+
+
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
@@ -3961,10 +4044,10 @@ Now available to download in full as a PDF.},
 1 StaticGroup:master\;0\;0\;0x8a8a8aff\;\;\;;
 2 StaticGroup:chaos\;0\;1\;0x8a8a8aff\;\;\;;
 1 StaticGroup:norms\;0\;1\;0x8a8a8aff\;\;\;;
-1 StaticGroup:swith\;0\;1\;0x8a8a8aff\;\;\;;
 2 StaticGroup:patents\;0\;1\;0x7c7c7cff\;\;\;;
+1 StaticGroup:swith\;0\;0\;0x8a8a8aff\;\;\;;
 1 StaticGroup:webpages\;0\;1\;0x8a8a8aff\;\;\;;
-1 StaticGroup:Reports\;0\;1\;0x8a8a8aff\;\;\;;
+1 StaticGroup:Reports\;0\;0\;0x8a8a8aff\;\;\;;
 2 StaticGroup:report_1\;0\;1\;0x7c7c7cff\;\;\;;
 2 StaticGroup:report_2\;0\;1\;0x7c7c7cff\;\;\;;
 1 StaticGroup:structural tests\;0\;0\;0x8a8a8aff\;\;\;;
@@ -3973,7 +4056,7 @@ Now available to download in full as a PDF.},
 2 StaticGroup:regression\;0\;0\;0x8a8a8aff\;\;\;;
 2 StaticGroup:llms\;0\;1\;0x8a8a8aff\;\;\;;
 1 StaticGroup:technische_mechanik\;0\;1\;0x8a8a8aff\;\;\;;
-1 StaticGroup:python\;0\;1\;0x8a8a8aff\;\;\;;
+1 StaticGroup:python\;0\;0\;0x8a8a8aff\;\;\;;
 2 StaticGroup:sympy\;0\;1\;0x8a8a8aff\;\;\;;
 2 StaticGroup:fenics\;0\;1\;0x8a8a8aff\;\;\;;
 2 StaticGroup:pytorch\;0\;1\;0x8a8a8aff\;\;\;;
