updated summary box

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -4013,6 +4013,27 @@ and Guidance Material for Large Rotorcraft CS-29},
 }
 
 
+@MISC{SAE_Gas,
+  author      = {{SAE International}},
+  institution = {SAE International},
+  title       = {Gaseous Hydrogen Storage for General Aviation AS7373, WIP 2021-07-06 },
+  url = {https://www.sae.org/standards/content/as7373/},
+  urldate = {2024-09-06},
+  type        = {Certification Specification},
+  groups      = {norms, webpages},
+}
+
+@MISC{SAE_Liquid,
+  author      = {{SAE International}},
+  institution = {SAE International},
+  title       = {LIQUID HYDROGEN STORAGE FOR AVIATION AS6679, WIP 2019-11-20},
+  url = {https://www.sae.org/standards/content/as6679/},
+  urldate = {2024-09-06},
+  type        = {Certification Specification},
+  groups      = {norms, webpages},
+}
+
+
 @Article{EASA2018,
   author       = {EASA},
   date         = {2018-06},
